--- a/iFigs.html
+++ b/iFigs.html
@@ -101,8 +101,10 @@ code {
 <img src="figs/histograms.png" alt="iFigs-Histogrmas" width="800">
 </center>
 
+<li> <b>Juan Marcos Ramirez</b>, Fernando Diez, Pablo Rojo, Vincenzo Mancuso and Antonio Fernandez-Anta. "Explainable Machine Learning for Performance Anomaly Detection and Classification in Mobile Networks." Computer Communications, Jan, 2023. [<a href="https://doi.org/10.1016/j.comcom.2023.01.003">link</a>, <a href="https://github.com/GCGImdea/NetPredict-Public">code</a>, <a href="bibtex/Ramirez2023Explainable.txt">bibtex</a>]. </li>
+
 <h3> LaTeX code </h3>
-<li> To reproduce this figure, the txt files can be downloaded from <a href="data/MSS_histogram.txt">MSS_histogram</a>, <a href="data/MSS_kde.txt">MSS_kde</a> <a href="data/RTT_histogram.txt">RTT_histogram</a>, <a href="data/RTT_kde.txt">RTT_kde</a> </li>
+<li> To reproduce this figure, the txt files can be downloaded from <a href="data/MSS_histogram.txt">MSS_histogram</a>, <a href="data/MSS_kde.txt">MSS_kde</a> <a href="data/RTT_histogram.txt">RTT_histogram</a>, <a href="data/RTT_kde.txt.">RTT_kde</a> </li>
 
 <ul class="nav">
   <p> \documentclass{article}<br>
