--- a/iFigs.html
+++ b/iFigs.html
@@ -102,7 +102,7 @@ code {
 </center>
 
 <h3> LaTeX code </h3>
-<li> To reproduce this figure, the txt files containing histogram and KDE data can be downloaded from <a href="data/MSS_histogram.txt">MSS_histogram</a>, <a href="data/MSS_kde.txt">MSS_kde</a> <a href="data/RTT_histogram.txt">RTT_histogram</a>, <a href="data/RTT_kde.txt">RTT_kde.</a> </li>
+<li> To reproduce this figure, you can download the TXT files containing histogram and KDE data from <a href="data/MSS_histogram.txt">MSS_histogram</a>, <a href="data/MSS_kde.txt">MSS_kde</a> <a href="data/RTT_histogram.txt">RTT_histogram</a>, <a href="data/RTT_kde.txt">RTT_kde.</a> </li>
 
 <ul class="nav">
   <p> \documentclass{article}<br>
