--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 			<h2> Journal Papers </h2>
 			<div class="pubitem">
 			<ul>
-			
+			    <li> Sergio Díaz-Aranda, Jose Aguilar, <b>Juan Marcos Ramirez</b>, David Rabanedo, Antonio Fernández-Anta, and Rosa E. Lillo. "Performance Analysis of NSUM Estimators in Social-Network Topologies." The American Statistician. Volume 79, Issue 2, 2025. [<a href="https://doi.org/10.1080/00031305.2024.2421361">link</a>, <a href="bibtex/Diaz2025Performance.txt">bibtex</a>] </li>
           <li> Jorge Bacca, Cristián Arcos, <b>Juan Marcos Ramirez</b>, and Henry Arguello. "Middle-output deep image prior for blind hyperspectral and multispectral image fusion." Signal Processing: Image Communication. Volume 132, March 2025, 117247. [<a href="https://doi.org/10.1016/j.image.2024.117247">link</a>, <a href="bibtex/Bacca2025Middle.txt">bibtex</a>] </li>
 			    <li> Gontzal Sagastabeitia, Josu Doncel, Jose Aguilar, Antonio Fernández-Anta, and <b>Juan Marcos Ramirez</b>. "COVID-19 seroprevalence estimation and forecasting in the USA from ensemble machine learning models using a stacking strategy." Expert Systems with Applications. Volume 258, December 2024, Expert Systems with Applications. [<a href="https://doi.org/10.1016/j.eswa.2024.124930">link</a>, <a href="bibtex/Sagas2024Covid.txt">bibtex</a>] </li>
 				<li> Diego Benito, Carlos Quintero, Jose Aguilar, <b>Juan Marcos Ramirez</b>, and Antonio Fernandez-Anta. "Explainability analysis: An in-depth comparison between Fuzzy Cognitive Maps and LAMDA." Applied Soft Computing, vol. 164, October, 2024, 111940. [<a href="https://doi.org/10.1016/j.asoc.2024.111940">link</a>, <a href="bibtex/Benito2024Explainability.txt">bibtex</a>]. </li>
