--- a/iFigs.html
+++ b/iFigs.html
@@ -163,7 +163,11 @@ code {
   <p>\end{document}<br>
 </ul>
 
-		
+<h2> Boxplots </h2>
+
+<center>
+<img src="figs/histograms.png" alt="iFigs-Histogrmas" width="800">
+</center>
 
 	</body>
 </html>
