--- a/iFigs.html
+++ b/iFigs.html
@@ -166,7 +166,7 @@ code {
 <h2> Boxplots </h2>
 
 <center>
-<img src="figs/histograms.png" alt="iFigs-Histogrmas" width="800">
+<img src="figs/boxplots.png" alt="Ten boxplots showing estimated prevalence values for robust MoR-type methods across different prevalence levels from 1 percent to 10 percent in Erdős–Rényi networks with mean 50. Each subplot displays boxplots for multiple methods with prevalence values on the y axis and method names on the x axis. The figure caption reads Figure 2 Erdős–Rényi mu equals 50. Boxplots yielded by robust MoR-type methods in scenarios without contamination for different prevalence levels. The overall tone is analytical and scientific." width="800">
 </center>
 
 	</body>
