--- a/iFigs.html
+++ b/iFigs.html
@@ -168,20 +168,8 @@ code {
 <center>
 <img src="figs/boxplots.png" alt="Ten boxplots showing estimated prevalence values for robust MoR-type methods across different prevalence levels from 1 percent to 10 percent in Erdős–Rényi networks with mean 50. Each subplot displays boxplots for multiple methods with prevalence values on the y axis and method names on the x axis. The figure caption reads Figure 2 Erdős–Rényi mu equals 50. Boxplots yielded by robust MoR-type methods in scenarios without contamination for different prevalence levels. The overall tone is analytical and scientific." width="800">
 </center>
-
-<!-- Visit Counter Box -->
-<div style="background: #f1f1f1; border: 1px solid #ccc; padding: 10px; width: 200px; margin: 20px auto; text-align: center; font-family: 'Open Sans', sans-serif;">
-  <span>Visits: </span>
-  <span id="visitCount" style="font-weight: bold; color: crimson;">...</span>
-</div>
-<script>
-fetch('https://api.countapi.xyz/update/jmramirez/iFigs?amount=1')
-  .then(res => res.json())
-  .then(data => {
-    document.getElementById('visitCount').textContent = data.value;
-  });
-</script>
-
+<h3> LaTeX code </h3>
+<li> To reproduce this figure, the TXT files containing boxplot data can be downloaded from <a href="data/boxplot_1.txt">boxplot_1</a>, <a
 
 	</body>
 </html>
