--- a/iFigs.html
+++ b/iFigs.html
@@ -169,9 +169,8 @@ code {
 <img src="figs/boxplots.png" alt="Ten boxplots showing estimated prevalence values for robust MoR-type methods across different prevalence levels from 1 percent to 10 percent in Erdős–Rényi networks with mean 50. Each subplot displays boxplots for multiple methods with prevalence values on the y axis and method names on the x axis. The figure caption reads Figure 2 Erdős–Rényi mu equals 50. Boxplots yielded by robust MoR-type methods in scenarios without contamination for different prevalence levels. The overall tone is analytical and scientific." width="800">
 </center>
 <h3> LaTeX code </h3>
-<li> To reproduce this figure, the TXT files containing boxplot LaTeX code can be downloaded from <a href="data/boxplot_1.txt">boxplot_1</a>, <a
-
-<li> The boxplot data can be downloaded from <a href="data/boxplots.zip">boxplot_data</a>, <a
+<li> To reproduce this figure, the LaTeX code for each boxplot can be downloaded from <a href="data/boxplot_1.txt">boxplot_1</a>.</li>
+<li> The boxplot data files are available in <a href="data/boxplots.zip">boxplot_data.zip</a>.</li>
 
 	</body>
 </html>
